--- a/Viz_part_1.Rmd
+++ b/Viz_part_1.Rmd
@@ -19,7 +19,7 @@ weather_df =
     name = recode(
       id, 
       USW00094728 = "CentralPark_NY", # matching ID to station name
-      USC00519397 = "Molokai_HI",
+      USW00022534 = "Molokai_HI",
       USS0023B17S = "Waterhole_WA"),
     tmin = tmin / 10,
     tmax = tmax / 10) |>
@@ -52,4 +52,40 @@ ggp_nyc_weather
 
 ## Fancy plot
 
+```{r}
+ggplot(weather_df, aes(x = tmin, y = tmax)) + 
+  geom_point(aes(color = name),alpha = 0.3) + # alpha sets the transparency of points
+  geom_smooth(se = FALSE) # add a smooth curve
+```
+
+Plot with facets
+
+```{r}
+ggplot(weather_df, aes(x = tmin, y = tmax, color = name)) + 
+  geom_point(alpha = 0.3) +
+  geom_smooth(se = FALSE) +
+  facet_grid(. ~ name) 
+  # put everything other than variable name under each facet named by the variable
+# facet_grid(name ~ .)
+```
+
+try assigning a specific color
+
+```{r}
+weather_df |>
+  filter(name != "CentralPark_NY") |>
+  ggplot(aes(x = date, y = tmax, color = name)) +
+  geom_point(alpha = 0.7, size = 0.5)
+#  geom_point(color = "blue")
+```
+
+
+Let's try a different plot. 
+
+```{r}
+ggplot(weather_df, aes(x = date, y = tmax, color = name)) + 
+  geom_point(aes(size = prcp, alpha = 0.3)) + # assign point size by precipitation
+  geom_smooth()
+
+```
 
