--- a/Viz_part_2.Rmd
+++ b/Viz_part_2.Rmd
@@ -6,12 +6,23 @@ output: github_document
 ```{r}
 library(tidyverse)
 library(ggridges)
+library(patchwork)
 
 knitr::opts_chunk$set(
   fig.width = 6,
   fig.asp = .6,
   out.width = "90%"
 )
+
+#theme_set(theme_minimal() + theme(legend.position = "bottom"))
+
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
 ```
 
 ```{r}
@@ -19,8 +30,8 @@ weather_df =
   rnoaa::meteo_pull_monitors(
     c("USW00094728", "USW00022534", "USS0023B17S"), #station ID
     var = c("PRCP", "TMIN", "TMAX"), 
-    date_min = "2021-01-01",
-    date_max = "2022-12-31") |>
+    date_min = "2022-01-01",
+    date_max = "2023-12-31") |>
   mutate(
     name = recode(
       id, 
@@ -31,6 +42,9 @@ weather_df =
     tmax = tmax / 10) |>
   select(name, id, everything())
 ```
+
+This results in a df with `r nrow(weather_df)` observations on six variables.
+
 
 ## Same plot from last time
 
@@ -83,7 +97,132 @@ weather_df |>
     caption = "Max vs min daily temp  in three locations, data from rnoaa"
   ) +
   viridis::scale_color_viridis(discrete = TRUE)
+  # use the viridis color scale instead of defalut
 ```
 
 
 ## Themes
+```{r theme}
+weather_df |>
+  ggplot(aes(x = tmin, y = tmax, color = name)) +
+  geom_point(alpha = .5)+
+  labs(
+    title = "Temperature plot",
+    x = "Min daily temp (Degrees C)",
+    y = "Max daily temp",
+    color = "Location",
+    caption = "Max vs min daily temp  in three locations, data from rnoaa"
+  ) +
+  viridis::scale_color_viridis(discrete = TRUE) +
+  theme_bw() + # transfer background from grey to black-and-white
+  #theme_classic() + # no grid-lines
+  #theme_minimal() + # no out lines
+  theme(legend.position = "bottom") # put legend at the bottom
+```
+
+
+## data argument
+
+```{r}
+weather_df |>
+  ggplot(aes(x = date, y = tmax, color = name)) +
+  geom_point() +
+  geom_smooth()
+
+nyc_weather_df =
+  weather_df |>
+  filter(name == "CentralPark_NY")
+
+hawaii_weather_df =
+  weather_df |>
+  filter(name == "Molokai_HI")
+
+ggplot(nyc_weather_df, aes(x = date, y= tmax, color = name)) +
+  geom_point() +
+  geom_line(data = hawaii_weather_df)
+  
+```
+
+
+## `patchwork`
+
+```{r}
+weather_df |>
+  ggplot(aes(x = date, y= tmax, color = name)) +
+  geom_point() +
+  facet_grid(. ~ name) # separate the plot under their names
+```
+
+```{r}
+ggp_temp_scatter = 
+  weather_df |>
+  ggplot(aes(x = tmin, y= tmax, color = name)) +
+  geom_point(alpha = .5) +
+  theme(legend.position = "none")
+
+ggp_prcp_density = 
+  weather_df |>
+  filter(prcp > 25) |>
+  ggplot(aes(x = prcp, fill = name)) +
+  geom_density() +
+  theme(legend.position = "none")
+
+ggp_tmax_date =
+  weather_df |>
+  ggplot(aes(x = date, y= tmax, color = name)) +
+  geom_point() +
+  geom_smooth(se = FALSE) +
+  theme(legend.position = "bottom")
+
+(ggp_temp_scatter + ggp_prcp_density) / ggp_tmax_date
+```
+
+
+## data manipulation
+
+```{r}
+weather_df |>
+  mutate(
+    name = fct_relevel(name, c("Molokai_HI", "CentralPark_NY", "Waterhole_WA")) # assign new order to the name
+  ) |>
+  ggplot(aes(x = name, y= tmax)) +
+  geom_boxplot() 
+
+weather_df |>
+  mutate(
+    name = fct_reorder(name, tmax) # reorder name according to tmax
+  ) |>
+  ggplot(aes(x = name, y= tmax, fill = name)) +
+  geom_violin() 
+```
+
+
+## complicated FAS plot
+
+```{r}
+litters_df =
+  read_csv("data/FAS_litters.csv") |>
+  janitor::clean_names() |>
+  separate(group, into = c("dose", "day_of_tx"), sep = 3)
+  
+pups_df =
+  read_csv("data/FAS_pups.csv") |>
+  janitor::clean_names() 
+
+fas_df = 
+  left_join(pups_df, litters_df, by = "litter_number")
+
+fas_df |>
+  select(dose, day_of_tx, starts_with("pd")) |>
+  pivot_longer(
+    pd_ears:pd_walk,
+    names_to = "outcome",
+    values_to = "pn_day"
+  ) |>
+  drop_na() |>
+  mutate(outcome = fct_reorder(outcome, pn_day)) |>
+  ggplot(aes(x = dose,y = pn_day)) +
+  geom_violin() +
+  facet_grid(day_of_tx ~ outcome)
+```
+
